# mcp_repo_for_ml_ai_lakehouse_book

./: README.md
databricks-mcp-server/: .env.example  ARCHITECTURE.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  databricks_mcp_notebook_client.py  pyproject.toml  setup.sh
databricks-mcp-server/databricks_mcp_server/: __init__.py  client.py  pydantic_models.py  server.py
databricks-mcp-server/databricks_mcp_server/implementation/: __init__.py  prompts.py  resources.py  tools.py
databricks-mcp-server/examples/: basic_usage.py  chart_examples.py  natural_language_queries.py  test_databricks.py
databricks-mcp-server/tests/: test_basic.py
